# fileserver

./: .gitignore  CMakeLists.txt  kill-http.sh  rsync_back.sh
client/: CMakeLists.txt  DbHelper.cpp  DbHelper.h  DbTask.cpp  DbTask.h  UploadMoniterTask.cpp  UploadMoniterTask.h  UploadTask.cpp  UploadTask.h  client.cpp  client.sln  client.vcxproj  multi.cpp  multiUpload.cpp  watch.cpp  watch.h
httpd/: CMakeLists.txt  dump.c  dump.h  epoll.cpp  event.c  event.h  hello.html  http.c  http.h  httpd.h  httpd.vcxproj  main.c  mergepipe.c  mergepipe.h  network.c  network.h  pfork.cpp  types.h  unicode_win32.c
httpd/Debug/: vc141.idb
httpd/Debug/httpd.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  httpd.lastbuildstate
mergedaemon/: CMakeLists.txt  MergeDelayTask.cpp  MergeDelayTask.h  MergeTask.cpp  MergeTask.h  TimerManager.cpp  TimerManager.h  checkMergeTask.cpp  hello.cpp  mergedaemon.cpp  mergedaemon.sln  mergedaemon.vcxproj  mergefile.c  mergefile.h  mergepipe.cpp  mergepipe.h  msgcommon.cpp  msgcommon.h
mergedaemon/Debug/: mergedaemon.ilk  vc141.idb
mergedaemon/Debug/mergedaemon.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mergedaemon.lastbuildstate
